--- a/apps/metrics-server/Cargo.toml
+++ b/apps/metrics-server/Cargo.toml
@@ -9,7 +9,7 @@ prost.workspace = true
 tokio.workspace = true
 mimalloc.workspace = true
 dotenvy.workspace = true
-proto = { path = "../../packages/deps/proto" }
+
 toml.workspace = true
 serde.workspace = true
 fake.workspace =true
@@ -17,7 +17,7 @@ prost-types.workspace =true
 chrono.workspace =true
 clickhouse.workspace = true
 anyhow = "1.0.98"
-
+candles-proto.workspace = true
 
 [target.'cfg(not(target_os = "windows"))'.dependencies]
 jemallocator.workspace = true
