--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "2"
-members = [  "apps/metrics-server","packages/deps/proto"]
+members = [  "apps/metrics-server"]
 
 
 [workspace.dependencies]
@@ -18,6 +18,7 @@ mimalloc = { version = "0.1.46" }
 jemallocator = { version = "0.5.4" }
 fake = { version = "4.2.0", features = ["derive", "chrono"] }
 dotenvy = "0.15.7"
+candles-proto={git="https://github.com/Sanchir01/auth-proto"}
 tonic-reflection = "0.13.1"
 tower-http = {version = "0.6.6",features = ["cors"]}
 
