--- a/apps/metrics-server/src/config/prod.toml
+++ b/apps/metrics-server/src/config/prod.toml
@@ -1,8 +1,8 @@
 [clickhouse]
-url = "http://docker.host.internal:8123"
+url = "clickhouse://j4k8wosg8gc0ogk04skgko00:9000"
 username= "default"
 database  = "default"
-password = "clickhouse"
+password = ""
 
 [grpc_server]
 port = 50051
