--- a/apps/url-shortener/src/config/dev.toml
+++ b/apps/url-shortener/src/config/dev.toml
@@ -9,6 +9,6 @@ idle_timeout="60s"
 username = "postgres"
 password = "postgres"
 host = "localhost"
-port = 5432
-database = "shotener"
+port = 5443
+database = "shortener"
 retry = 3
