--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,12 +26,14 @@ openssl-sys = { version = "0.9", features = ["vendored"] }
 axum = "0.8.4"
 humantime = "2.1.0"
 sqlx = { version = "0.8.6", features = [
-    "postgres",
-    "runtime-tokio-rustls",
-    "chrono",
-    "uuid",
+  "postgres",
+  "runtime-tokio-rustls",
+  "chrono",
+  "uuid",
 ] }
-
+uuid = { version = "1", features = ["v4"] }
+async-trait = "0.1.88"
+mockall = "0.13.1"
 [workspace.dev-dependencies]
 clickhouse = { version = "0.13.3", features = ["test-util"] }
 openssl-sys = { version = "0.9", features = ["vendored"] }
