--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,8 @@ sqlx = { version = "0.8.6", features = [
 uuid = { version = "1", features = ["v4"] }
 async-trait = "0.1.88"
 mockall = "0.13.1"
+sea-query = { version = "0.32.6" }
+
 [workspace.dev-dependencies]
 clickhouse = { version = "0.13.3", features = ["test-util"] }
 openssl-sys = { version = "0.9", features = ["vendored"] }
