--- a/apps/url-shortener/Cargo.toml
+++ b/apps/url-shortener/Cargo.toml
@@ -21,7 +21,7 @@ sqlx.workspace = true
 mockall.workspace = true
 async-trait.workspace = true
 uuid.workspace = true
-
+sea-query.workspace = true
 
 [target.'cfg(not(target_os = "windows"))'.dependencies]
 jemallocator.workspace = true
