--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -1,5 +1,5 @@
 services:
-  app:
+  shortener:
     build:
       context: .
       dockerfile: Dockerfile
@@ -24,6 +24,6 @@ services:
 
 
 volumes:
-  app:
+  shortener:
   clickhouse_data:
   clickhouse_config:
