add base repo create url

--- a/apps/url-shortener/Cargo.toml
+++ b/apps/url-shortener/Cargo.toml
@@ -24,6 +24,6 @@ uuid.workspace = true
 sea-query.workspace = true
 anyhow.workspace = true
 serde_json.workspace = true
-
+validator.workspace = true
 [target.'cfg(not(target_os = "windows"))'.dependencies]
 jemallocator.workspace = true
