--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,6 @@ candles-proto = { git = "https://github.com/Sanchir01/auth-proto" }
 tonic-reflection = "0.13.1"
 tower-http = { version = "0.6.6", features = ["cors"] }
 kafka = { version = "0.10" }
-openssl-sys = { version = "0.9", features = ["vendored"] }
 axum = "0.8.4"
 humantime = "2.1.0"
 sqlx = { version = "0.8.6", features = [
@@ -37,9 +36,12 @@ async-trait = "0.1.88"
 mockall = "0.13.1"
 sea-query = { version = "0.32.6" }
 serde_json="1.0.140"
+validator ={version = "0.20.0",features = ["derive"]}
+
+
 [workspace.dev-dependencies]
 clickhouse = { version = "0.13.3", features = ["test-util"] }
-openssl-sys = { version = "0.9", features = ["vendored"] }
+
 
 [profile.release]
 opt-level = 3
